Fix header position on mobile

--- a/styles.css
+++ b/styles.css
@@ -12,27 +12,34 @@ html, body {
     box-sizing: inherit;
 }
 
+.container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .header, .footer {
     font-family: 'Roboto Slab', sans-serif;
+    width: 100%;
+    padding: 20px;
 }
 
 .header {
+    height: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
     text-align: center;
-    font-size: 1.6em;
+    font-size: 3.5em;
     color: #333333;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 50px 0;
 }
 
 .main {
     font-family: 'Noto Sans Mono', monospace;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .wrapper {
@@ -143,15 +150,10 @@ html, body {
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;  
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;  
-    padding: 20px;
+    gap: 10px;
     color: black;
 }
   
